登录相关功能

--- a/call-for-papers.html
+++ b/call-for-papers.html
@@ -154,7 +154,7 @@
                             <div class="theme-item">
                                 <div class="theme-icon"><i class="fas fa-bolt"></i></div>
                                 <div class="theme-content">
-                                    <h3>Session 6: Energy & Environmental Sustainability</h3>
+                                    <h3>Session 6: Journal Forum of Energy & Environmental Sustainability</h3>
                                     <ul>
                                         <li>Carbon neutrality in water sector</li>
                                         <li>Renewable energy integration</li>
@@ -202,7 +202,7 @@
                             <div class="publication-item">
                                 <i class="fas fa-book"></i>
                                 <div>
-                                    <h4>Energy & Environmental Sustainability Journal</h4>
+                                    <h4>Journal Forum of Energy & Environmental Sustainability</h4>
                                     <p>Special issue dedicated to conference proceedings</p>
                                 </div>
                             </div>
