--- a/committees.html
+++ b/committees.html
@@ -79,7 +79,7 @@
                         <h3>Conference Chair</h3>
                         <div class="committee-list">
                             <div class="committee-member">
-                                <h4>To Be Announced</h4>
+                                <h4>Prof. Zhiwei Wang</h4>
                                 <p class="member-title">Professor, Tongji University</p>
                                 <p class="member-affiliation">College of Environmental Science and Engineering</p>
                             </div>
@@ -87,16 +87,12 @@
                     </div>
 
                     <div class="committee-section">
-                        <h3>Conference Secretary</h3>
+                        <h3>Executive Conference Chair</h3>
                         <div class="committee-list">
                             <div class="committee-member">
-                                <h4>Dr. Secretary Name</h4>
-                                <p class="member-title">Associate Professor</p>
-                                <p class="member-affiliation">College of Environmental Science and Engineering, Tongji University</p>
-                                <p class="member-contact">
-                                    <i class="fas fa-envelope"></i> suws2025@tongji.edu.cn<br>
-                                    <i class="fas fa-phone"></i> +86 021-65986919
-                                </p>
+                                <h4>Prof. Ying Wang</h4>
+                                <p class="member-title">Professor, Tongji University</p>
+                                <p class="member-affiliation">College of Environmental Science and Engineering</p>
                             </div>
                         </div>
                     </div>
