--- a/index.html
+++ b/index.html
@@ -184,32 +184,37 @@
                 <div class="topic-card">
                     <div class="topic-number">01</div>
                     <h3>Water Quality Security and Digital Technology</h3>
-                    <p>Advanced monitoring, sensors, AI, and data analytics for water quality management</p>
+                    <p>Advanced monitoring, AI-driven analytics, and digital transformation in water quality management</p>
                 </div>
                 <div class="topic-card">
                     <div class="topic-number">02</div>
                     <h3>Green Water Treatment and Resource Recycling</h3>
-                    <p>Sustainable treatment processes, resource recovery, and circular economy approaches</p>
+                    <p>Sustainable treatment technologies, resource recovery, and circular economy approaches</p>
                 </div>
                 <div class="topic-card">
                     <div class="topic-number">03</div>
                     <h3>Water Environment Remediation and Healthy Cities</h3>
-                    <p>Urban water ecosystem restoration, public health, and liveable cities</p>
+                    <p>Urban water ecosystem restoration, public health, and creating liveable cities</p>
                 </div>
                 <div class="topic-card">
                     <div class="topic-number">04</div>
                     <h3>Environmental System Engineering and Risk Control</h3>
-                    <p>System optimization, modeling, and risk assessment for water infrastructure</p>
+                    <p>System optimization, modeling, risk assessment for resilient water infrastructure</p>
                 </div>
                 <div class="topic-card">
                     <div class="topic-number">05</div>
                     <h3>Industry-Academia-Research Forum</h3>
-                    <p>Bridging research and practice through collaborative innovation</p>
+                    <p>Bridging research and practice through collaborative innovation and technology transfer</p>
                 </div>
                 <div class="topic-card">
                     <div class="topic-number">06</div>
-                    <h3>Energy & Environmental Sustainability</h3>
-                    <p>Energy efficiency, renewable energy integration, and carbon neutrality</p>
+                    <h3>Journal Forum of Energy & Environmental Sustainability</h3>
+                    <p>Carbon neutrality, energy efficiency, and renewable energy integration</p>
+                </div>
+                <div class="topic-card">
+                    <div class="topic-number">07</div>
+                    <h3>Youth Student Forum</h3>
+                    <p>Platform for early-career researchers and students to present their work</p>
                 </div>
             </div>
         </div>
