--- a/program.html
+++ b/program.html
@@ -108,7 +108,7 @@
                                     <td class="time-col">14:00-17:00</td>
                                     <td>
                                         <div class="session-title">Editorial Board Meeting</div>
-                                        <div class="session-location">Energy & Environmental Sustainability Journal</div>
+                                        <div class="session-location">Journal Forum of Energy & Environmental Sustainability</div>
                                     </td>
                                 </tr>
                             </tbody>
@@ -173,7 +173,7 @@
                                         <div class="session-title">Environmental System Engineering and Risk Control</div>
                                     </td>
                                     <td>
-                                        <div class="session-title">Energy & Environmental Sustainability Journal Forum</div>
+                                        <div class="session-title">Journal Forum of Energy & Environmental Sustainability</div>
                                     </td>
                                 </tr>
                             </tbody>
@@ -278,7 +278,7 @@
                         </div>
                         <div class="topic-card">
                             <div class="topic-number">06</div>
-                            <h3>Energy & Environmental Sustainability</h3>
+                            <h3>Journal Forum of Energy & Environmental Sustainability</h3>
                             <p>Carbon neutrality, energy efficiency, and renewable energy integration</p>
                         </div>
                         <div class="topic-card">
