--- a/program.html
+++ b/program.html
@@ -30,8 +30,8 @@
                     <li class="dropdown">
                         <a href="program.html" class="active">Conference Program <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#topics">Conference Topics</a></li>
                             <li><a href="#schedule">Session Plans</a></li>
+                            <li><a href="#topics">Conference Topics</a></li>
                             <li><a href="#keynote">Keynote Speakers</a></li>
                         </ul>
                     </li>
@@ -61,7 +61,7 @@
     <section class="page-header">
         <div class="container">
             <h1>Conference Program</h1>
-            <p class="breadcrumb"><a href="index.html">Home</a> / Conference Program</p>
+            <p class="breadcrumb"><i class="fas fa-location-dot"></i><a href="index.html">Home</a> / Conference Program</p>
         </div>
     </section>
 
@@ -148,7 +148,7 @@
                     <div class="schedule-day">
                         <h3><i class="fas fa-calendar-day"></i> Friday Afternoon, December 19, 2025</h3>
                         <p class="session-note">Parallel Sessions (14:00-17:00)</p>
-                        <table class="schedule-table">
+                        <table class="schedule-table session-grid-table">
                             <thead>
                                 <tr>
                                     <th>Session 1</th>
@@ -160,19 +160,19 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>
+                                    <td data-session="Session 1">
                                         <div class="session-title">Water Quality Security and Digital Technology</div>
                                     </td>
-                                    <td>
+                                    <td data-session="Session 2">
                                         <div class="session-title">Green Water Treatment and Resource Recycling</div>
                                     </td>
-                                    <td>
+                                    <td data-session="Session 3">
                                         <div class="session-title">Water Environment Remediation and Healthy Cities</div>
                                     </td>
-                                    <td>
+                                    <td data-session="Session 4">
                                         <div class="session-title">Environmental System Engineering and Risk Control</div>
                                     </td>
-                                    <td>
+                                    <td data-session="Session 6">
                                         <div class="session-title">Journal Forum of Energy & Environmental Sustainability</div>
                                     </td>
                                 </tr>
@@ -184,7 +184,7 @@
                     <div class="schedule-day">
                         <h3><i class="fas fa-calendar-day"></i> Saturday Morning, December 20, 2025</h3>
                         <p class="session-note">Parallel Sessions (09:00-12:00)</p>
-                        <table class="schedule-table">
+                        <table class="schedule-table session-grid-table">
                             <thead>
                                 <tr>
                                     <th>Session 1</th>
@@ -196,19 +196,19 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>
+                                    <td data-session="Session 1">
                                         <div class="session-title">Water Quality Security and Digital Technology</div>
                                     </td>
-                                    <td>
+                                    <td data-session="Session 2">
                                         <div class="session-title">Green Water Treatment and Resource Recycling</div>
                                     </td>
-                                    <td>
+                                    <td data-session="Session 3">
                                         <div class="session-title">Water Environment Remediation and Healthy Cities</div>
                                     </td>
-                                    <td>
+                                    <td data-session="Session 5">
                                         <div class="session-title">Industry-Academia-Research Forum</div>
                                     </td>
-                                    <td>
+                                    <td data-session="Session 7">
                                         <div class="session-title">Youth Student Forum</div>
                                     </td>
                                 </tr>
@@ -319,37 +319,23 @@
                     <p class="footer-date">December 18-20, 2025<br>Shanghai, China</p>
                 </div>
                 <div class="footer-col">
-                    <h4>Quick Links</h4>
+                    <h4>Key Links</h4>
                     <ul class="footer-links">
-                        <li><a href="index.html">Home</a></li>
                         <li><a href="call-for-papers.html">Call for Papers</a></li>
                         <li><a href="program.html">Conference Program</a></li>
                         <li><a href="registration.html">Registration</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Important Links</h4>
-                    <ul class="footer-links">
-                        <li><a href="committees.html">Committees</a></li>
-                        <li><a href="venue.html">Venue & Travel</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
                         <li><a href="https://iwa-network.org" target="_blank">IWA Network</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
                     <h4>Contact Information</h4>
+                    <p><strong>Conference Secretary:</strong> Assoc. Prof. Boran Wu</p>
+                    <p>
+                        <i class="fas fa-phone"></i> +86 021-65983869
+                    </p>
                     <p>
                         <i class="fas fa-envelope"></i> 
-                        <a href="mailto:suws2025@tongji.edu.cn">suws2025@tongji.edu.cn</a>
-                    </p>
-                    <p>
-                        <i class="fas fa-phone"></i> +86 021-65986919
-                    </p>
-                    <p>
-                        <i class="fas fa-map-marker-alt"></i> 
-                        Tongji University<br>
-                        1239 Siping Road<br>
-                        Shanghai 200092, China
+                        <a href="mailto:boranwu@tongji.edu.cn">boranwu@tongji.edu.cn</a>
                     </p>
                 </div>
             </div>
