--- a/venue.html
+++ b/venue.html
@@ -30,8 +30,8 @@
                     <li class="dropdown">
                         <a href="program.html">Conference Program <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="program.html#topics">Conference Topics</a></li>
                             <li><a href="program.html#schedule">Session Plans</a></li>
+                            <li><a href="program.html#topics">Conference Topics</a></li>
                             <li><a href="program.html#keynote">Keynote Speakers</a></li>
                         </ul>
                     </li>
@@ -61,7 +61,7 @@
     <section class="page-header">
         <div class="container">
             <h1>Venue & Travel</h1>
-            <p class="breadcrumb"><a href="index.html">Home</a> / Venue & Travel</p>
+            <p class="breadcrumb"><i class="fas fa-location-dot"></i><a href="index.html">Home</a> / Venue & Travel</p>
         </div>
     </section>
 
@@ -78,15 +78,10 @@
                     <div class="venue-info-box">
                         <div class="venue-details">
                             <h3><i class="fas fa-map-marker-alt"></i> Location</h3>
-                            <p><strong>Shanghai, China</strong></p>
-                            <p>Specific venue details to be announced</p>
+                            <h4>Hyatt Regency Shanghai Songjiang</h4>
+                            <p><strong>Address:</strong></p>
+                            <p>No. 3, Lane 599, Guangfulin Road, Songjiang District, Shanghai 201620, P.R. China</p>
                         </div>
-                    </div>
-
-                    <div class="info-box">
-                        <h4><i class="fas fa-info-circle"></i> Venue Information</h4>
-                        <p>Complete venue details including exact address and facilities information will be announced in a subsequent notice.</p>
-                        <p>Please check back regularly for updates.</p>
                     </div>
                 </div>
 
@@ -130,10 +125,13 @@
                     <h2>Accommodation</h2>
                     <p>Shanghai offers a wide range of accommodation options to suit all budgets.</p>
 
-                    <div class="info-box">
-                        <h4><i class="fas fa-hotel"></i> Hotel Recommendations</h4>
-                        <p>A list of recommended hotels near the conference venue will be provided once the venue is confirmed.</p>
-                        <p>We recommend booking your accommodation early, as December is a popular travel season in Shanghai.</p>
+                    <div class="venue-info-box">
+                        <div class="venue-details">
+                            <h3><i class="fas fa-hotel"></i> Recommended Hotel</h3>
+                            <h4>Hyatt Regency Shanghai Songjiang</h4>
+                            <p><strong>Address:</strong></p>
+                            <p>No. 3, Lane 599, Guangfulin Road, Songjiang District, Shanghai 201620, P.R. China</p>
+                        </div>
                     </div>
 
                     <div class="guidelines-box">
@@ -232,37 +230,23 @@
                     <p class="footer-date">December 18-20, 2025<br>Shanghai, China</p>
                 </div>
                 <div class="footer-col">
-                    <h4>Quick Links</h4>
+                    <h4>Key Links</h4>
                     <ul class="footer-links">
-                        <li><a href="index.html">Home</a></li>
                         <li><a href="call-for-papers.html">Call for Papers</a></li>
                         <li><a href="program.html">Conference Program</a></li>
                         <li><a href="registration.html">Registration</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Important Links</h4>
-                    <ul class="footer-links">
-                        <li><a href="committees.html">Committees</a></li>
-                        <li><a href="venue.html">Venue & Travel</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
                         <li><a href="https://iwa-network.org" target="_blank">IWA Network</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
                     <h4>Contact Information</h4>
+                    <p><strong>Conference Secretary:</strong> Assoc. Prof. Boran Wu</p>
+                    <p>
+                        <i class="fas fa-phone"></i> +86 021-65983869
+                    </p>
                     <p>
                         <i class="fas fa-envelope"></i> 
-                        <a href="mailto:suws2025@tongji.edu.cn">suws2025@tongji.edu.cn</a>
-                    </p>
-                    <p>
-                        <i class="fas fa-phone"></i> +86 021-65986919
-                    </p>
-                    <p>
-                        <i class="fas fa-map-marker-alt"></i> 
-                        Tongji University<br>
-                        1239 Siping Road<br>
-                        Shanghai 200092, China
+                        <a href="mailto:boranwu@tongji.edu.cn">boranwu@tongji.edu.cn</a>
                     </p>
                 </div>
             </div>
