--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,141 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contact - 2025 International Conference on Sustainable Urban Water Systems">
+    <title>Contact - IWA SUWS 2025</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/pages.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+<body>
+    <!-- Navigation -->
+    <nav class="navbar">
+        <div class="container">
+            <div class="nav-wrapper">
+                <div class="logo">
+                    <a href="index.html">
+                        <img src="images/iwa-logo.png" alt="IWA Logo" class="logo-img">
+                    </a>
+                </div>
+                <button class="mobile-menu-toggle" aria-label="Toggle menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+                <ul class="nav-menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="call-for-papers.html">Call For Papers</a></li>
+                    <li class="dropdown">
+                        <a href="program.html">Conference Program <i class="fas fa-chevron-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="program.html#schedule">Session Plans</a></li>
+                            <li><a href="program.html#topics">Conference Topics</a></li>
+                            <li><a href="program.html#keynote">Keynote Speakers</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="committees.html">Committees <i class="fas fa-chevron-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="committees.html#organizing">Organising Committee</a></li>
+                            <li><a href="committees.html#programme">Programme Committee</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="venue.html">Venue <i class="fas fa-chevron-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="venue.html#conference">Conference Venue</a></li>
+                            <li><a href="venue.html#accommodation">Accommodation</a></li>
+                            <li><a href="venue.html#transportation">Transportation</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="registration.html">Registration</a></li>
+                    <li><a href="contact.html" class="active">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
+    <!-- Page Header -->
+    <section class="page-header">
+        <div class="container">
+            <h1>Contact Us</h1>
+            <p class="breadcrumb"><i class="fas fa-location-dot"></i><a href="index.html">Home</a> / Contact</p>
+        </div>
+    </section>
+
+    <!-- Contact Content -->
+    <section class="content-section">
+        <div class="container">
+            <div class="main-content">
+                <div class="content-block">
+                    <h2>Conference Secretariat</h2>
+                    <p class="lead">
+                        For any inquiries regarding the conference, please feel free to contact our conference secretariat.
+                    </p>
+
+                    <div class="venue-info-box">
+                        <div class="venue-details">
+                            <h3><i class="fas fa-user-tie"></i> Conference Secretary</h3>
+                            <h4>Assoc. Prof. Boran Wu</h4>
+                            <p>
+                                <strong><i class="fas fa-phone"></i> Phone:</strong><br>
+                                +86 021-65983869
+                            </p>
+                            <p>
+                                <strong><i class="fas fa-envelope"></i> Email:</strong><br>
+                                <a href="mailto:boranwu@tongji.edu.cn">boranwu@tongji.edu.cn</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="content-block cta-box">
+                    <h3><i class="fas fa-paper-plane"></i> Get in Touch</h3>
+                    <p>We look forward to hearing from you and answering any questions you may have about the conference.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-col">
+                    <h4>Conference 2025</h4>
+                    <p>2025 International Conference on Sustainable Urban Water Systems</p>
+                    <p class="footer-date">December 18-20, 2025<br>Shanghai, China</p>
+                </div>
+                <div class="footer-col">
+                    <h4>Key Links</h4>
+                    <ul class="footer-links">
+                        <li><a href="call-for-papers.html">Call for Papers</a></li>
+                        <li><a href="program.html">Conference Program</a></li>
+                        <li><a href="registration.html">Registration</a></li>
+                        <li><a href="https://iwa-network.org" target="_blank">IWA Network</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Contact Information</h4>
+                    <p><strong>Conference Secretary:</strong> Assoc. Prof. Boran Wu</p>
+                    <p>
+                        <i class="fas fa-phone"></i> +86 021-65983869
+                    </p>
+                    <p>
+                        <i class="fas fa-envelope"></i> 
+                        <a href="mailto:boranwu@tongji.edu.cn">boranwu@tongji.edu.cn</a>
+                    </p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 Sustainable Urban Water Systems Conference. All rights reserved.</p>
+                <p>Organized by Tongji University | Supported by IWA</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="js/script.js"></script>
+</body>
+</html>
