--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     <li class="dropdown">
                         <a href="program.html">Conference Program <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="program.html#topics">Conference Topics</a></li>
                             <li><a href="program.html#schedule">Session Plans</a></li>
+                            <li><a href="program.html#topics">Conference Topics</a></li>
                             <li><a href="program.html#keynote">Keynote Speakers</a></li>
                         </ul>
                     </li>
@@ -293,37 +293,23 @@
                     <p class="footer-date">December 18-20, 2025<br>Shanghai, China</p>
                 </div>
                 <div class="footer-col">
-                    <h4>Quick Links</h4>
+                    <h4>Key Links</h4>
                     <ul class="footer-links">
-                        <li><a href="index.html">Home</a></li>
                         <li><a href="call-for-papers.html">Call for Papers</a></li>
                         <li><a href="program.html">Conference Program</a></li>
                         <li><a href="registration.html">Registration</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Important Links</h4>
-                    <ul class="footer-links">
-                        <li><a href="committees.html">Committees</a></li>
-                        <li><a href="venue.html">Venue & Travel</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
                         <li><a href="https://iwa-network.org" target="_blank">IWA Network</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
                     <h4>Contact Information</h4>
+                    <p><strong>Conference Secretary:</strong> Assoc. Prof. Boran Wu</p>
+                    <p>
+                        <i class="fas fa-phone"></i> +86 021-65983869
+                    </p>
                     <p>
                         <i class="fas fa-envelope"></i> 
-                        <a href="mailto:suws2025@tongji.edu.cn">suws2025@tongji.edu.cn</a>
-                    </p>
-                    <p>
-                        <i class="fas fa-phone"></i> +86 021-65986919
-                    </p>
-                    <p>
-                        <i class="fas fa-map-marker-alt"></i> 
-                        Tongji University<br>
-                        1239 Siping Road<br>
-                        Shanghai 200092, China
+                        <a href="mailto:boranwu@tongji.edu.cn">boranwu@tongji.edu.cn</a>
                     </p>
                 </div>
             </div>
